--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -1,1 +1,117 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.card {
+  height: 400px;
+  width: 320px;
+  background-color: rgba(255, 255, 255, 0.06);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 12px;
+  -webkit-box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
+          box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
+  font-family: 'Poppins',sans-serif;
+}
+
+.card .input-fields {
+  text-align: center;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 110px;
+}
+
+.card .input-fields label {
+  display: block;
+  margin-bottom: 15px;
+}
+
+.card .input-fields input {
+  margin-bottom: 30px;
+  background-color: rgba(255, 255, 255, 0.06);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  border: none;
+  border-radius: 4px;
+  width: 75%;
+  height: 35px;
+  text-align: center;
+  color: #d5d5d5;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0.7px;
+}
+
+.desc {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 15px;
+}
+
+.primary-text {
+  color: #d5d5d5;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0.7px;
+  margin: 5px 0;
+}
+
+.secondary-text {
+  color: #c0c0c0;
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin: 5px 0;
+}
+
+.details {
+  width: 100%;
+  height: 70px;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.06);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  border: none;
+  border-radius: 0 0 8px 8px;
+  padding: 5px 0;
+}
+
+.details:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.calculate-text {
+  width: 100%;
+  text-align: center;
+}
+
+button:focus {
+  outline: 0;
+}
+
+input:focus {
+  outline: 0;
+}
+
+.phrase {
+  margin-top: 15px;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  background: url("/client/static/img/background.png") no-repeat center center fixed;
+  background-size: cover;
+}
+/*# sourceMappingURL=style.css.map */
