--- a/client/static/css/partial/_card.scss
+++ b/client/static/css/partial/_card.scss
@@ -1,7 +1,9 @@
+@import "variables";
+
 .card {
-	height: 400px;
-	width: 320px;
-	background-color: rgba(255,255,255,0.06);
+	height: 570px;
+	width: 400px;
+	background-color: rgba($card-color, $alpha-card);
 	backdrop-filter: blur(20px);
 	position: absolute;
 	margin: auto;
@@ -11,22 +13,22 @@
 	bottom: 0;
 	border-radius: 12px;
 	box-shadow: 20px 20px 22px rgba(0,0,0,0.2);
-	font-family: 'Poppins',sans-serif;
+	font-family: $primary-font;
 
 	.input-fields {
 		text-align: center;
 		width: 100%;
 		text-align: center;
 		position: absolute;
-		top: 110px;
+		top: 70px;
 
 		label {
 			display:block;
-			margin-bottom: 15px;
+			margin: 0 0 12px 0;
 		}
 
-		input {
-			margin-bottom: 30px;
+		input, select {
+			margin-bottom: 20px;
 			background-color: rgba(255,255,255,0.06);
 			backdrop-filter: blur(20px);
 			border: none;
@@ -34,10 +36,76 @@
 			width: 75%;
 			height: 35px;
 			text-align: center;
-			color: #d5d5d5;
-			font-size: 16px;
-			font-weight: 600;
-			letter-spacing: 0.7px;
+			color: $primary-font-color;
+			font-weight: 400;
+			font-size: 15px;
+			letter-spacing: 1px;
+
+			&:hover {
+				cursor: pointer;
+				background-color: rgba(255,255,255,0.2);
+
+			}
+		}
+
+		select {
+			text-align: center;
+			text-align-last: center;
+		  }
+		option {
+			color:black;
+			text-align: left;
+		}
+
+		.coordinates{
+			display: grid;
+			grid-template-columns: 50px 20px 5px auto 10px 20px 5px auto 50px;
+			grid-template-rows: 35px;
+			margin: 0 0 20px 0;
+			align-items: center;
+			
+			.c-left {
+				grid-column: 4 / 5;
+				grid-row: 1 / 2;
+				width: 100%;
+				margin: 0;
+			}
+			.c-right {
+				grid-column: 8 / 9;
+				grid-row: 1 / 2;
+				width: 100%;
+				margin: 0;
+			}
+
+			.c-left-lbl {
+				grid-column: 2 / 3;
+				grid-row: 1 / 2;
+				width: 100%;
+				height: 100%;
+				background-color: rgba($card-color, $alpha-card);
+				border-radius: 4px;
+
+				span {
+					position: relative;
+					left: 0px;
+					top: 25%;
+				};
+			}
+
+			.c-right-lbl {
+				grid-column: 6 / 7;
+				grid-row: 1 / 2;
+				width: 100%;
+				height: 100%;
+				background-color: rgba($card-color, $alpha-card);
+				border-radius: 4px;
+
+				span {
+					position: relative;
+					left: 0px;
+					top: 25%;
+				};
+			}
 		}
 	}
 }
@@ -48,37 +116,21 @@
 	top: 15px;
 }
 .primary-text{
-	color: #d5d5d5;
+	// color: #d5d5d5;
+	color: $primary-font-color;
 	font-size: 16px;
 	font-weight: 600;
 	letter-spacing: 0.7px;
 	margin: 5px 0;
 }
 .secondary-text{
-	color: #c0c0c0;
+	// color: #c0c0c0;
+	color: $primary-font-color;
 	font-weight: 400;
 	font-size: 14px;
 	letter-spacing: 1px;
 	margin: 5px 0;
 }
-// .details{
-// 	display: grid;
-// 	width: 100%;
-// 	height: 70px;
-// 	grid-template-columns: auto auto;
-// 	position: absolute;
-// 	bottom: 0;
-// 	background-color: rgba(255,255,255,0.06);
-// 	backdrop-filter: blur(20px);
-// 	border-radius: 0 0 8px 8px;
-// 	padding: 5px 0;
-// }
-// .details>div{
-// 	text-align: center;
-// }
-// .details>div:first-child{
-// 	border-right: 2px solid rgba(255,255,255,0.08);
-// }
 
 .details {
 	width: 100%;
@@ -100,16 +152,23 @@
 .calculate-text {
 	width: 100%;
 	text-align: center;
+	text-transform: uppercase;
 }
 
 button:focus {
 	outline:0;
 }
 
-input:focus {
+input:focus, select:focus {
 	outline:0;
+	caret-color: $primary-font-color;
 }
 
 .phrase {
 	margin-top: 15px;
 }
+
+// .drive-pos {	
+// 	text-align: center;
+// 	width: 100%;
+// }
