--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -1,7 +1,7 @@
 .card {
-  height: 400px;
-  width: 320px;
-  background-color: rgba(255, 255, 255, 0.06);
+  height: 570px;
+  width: 400px;
+  background-color: rgba(74, 74, 72, 0.3);
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
   position: absolute;
@@ -13,7 +13,7 @@
   border-radius: 12px;
   -webkit-box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
           box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
-  font-family: 'Poppins',sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .card .input-fields {
@@ -21,16 +21,16 @@
   width: 100%;
   text-align: center;
   position: absolute;
-  top: 110px;
+  top: 70px;
 }
 
 .card .input-fields label {
   display: block;
-  margin-bottom: 15px;
+  margin: 0 0 12px 0;
 }
 
-.card .input-fields input {
-  margin-bottom: 30px;
+.card .input-fields input, .card .input-fields select {
+  margin-bottom: 20px;
   background-color: rgba(255, 255, 255, 0.06);
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
@@ -39,10 +39,98 @@
   width: 75%;
   height: 35px;
   text-align: center;
-  color: #d5d5d5;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: 0.7px;
+  color: white;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 1px;
+}
+
+.card .input-fields input:hover, .card .input-fields select:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.card .input-fields select {
+  text-align: center;
+  text-align-last: center;
+}
+
+.card .input-fields option {
+  color: black;
+  text-align: left;
+}
+
+.card .input-fields .coordinates {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50px 20px 5px auto 10px 20px 5px auto 50px;
+      grid-template-columns: 50px 20px 5px auto 10px 20px 5px auto 50px;
+  -ms-grid-rows: 35px;
+      grid-template-rows: 35px;
+  margin: 0 0 20px 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card .input-fields .coordinates .c-left {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4 / 5;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  width: 100%;
+  margin: 0;
+}
+
+.card .input-fields .coordinates .c-right {
+  -ms-grid-column: 8;
+  -ms-grid-column-span: 1;
+  grid-column: 8 / 9;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  width: 100%;
+  margin: 0;
+}
+
+.card .input-fields .coordinates .c-left-lbl {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(74, 74, 72, 0.3);
+  border-radius: 4px;
+}
+
+.card .input-fields .coordinates .c-left-lbl span {
+  position: relative;
+  left: 0px;
+  top: 25%;
+}
+
+.card .input-fields .coordinates .c-right-lbl {
+  -ms-grid-column: 6;
+  -ms-grid-column-span: 1;
+  grid-column: 6 / 7;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(74, 74, 72, 0.3);
+  border-radius: 4px;
+}
+
+.card .input-fields .coordinates .c-right-lbl span {
+  position: relative;
+  left: 0px;
+  top: 25%;
 }
 
 .desc {
@@ -53,7 +141,7 @@
 }
 
 .primary-text {
-  color: #d5d5d5;
+  color: white;
   font-size: 16px;
   font-weight: 600;
   letter-spacing: 0.7px;
@@ -61,7 +149,7 @@
 }
 
 .secondary-text {
-  color: #c0c0c0;
+  color: white;
   font-weight: 400;
   font-size: 14px;
   letter-spacing: 1px;
@@ -89,18 +177,88 @@
 .calculate-text {
   width: 100%;
   text-align: center;
+  text-transform: uppercase;
 }
 
 button:focus {
   outline: 0;
 }
 
-input:focus {
+input:focus, select:focus {
   outline: 0;
+  caret-color: white;
 }
 
 .phrase {
   margin-top: 15px;
+}
+
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 350px;
+  left: 50px;
+  height: 25px;
+  width: 25px;
+  background-color: rgba(74, 74, 72, 0.3);
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 * {
@@ -111,7 +269,7 @@ input:focus {
 }
 
 body {
-  background: url("/client/static/img/background.png") no-repeat center center fixed;
+  background: url("/client/static/img/background_2.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 /*# sourceMappingURL=style.css.map */
