--- a/client/static/css/style.scss
+++ b/client/static/css/style.scss
@@ -1,4 +1,5 @@
 @import "partial/card";
+@import "partial/checkbox";
 
 *{
 	padding: 0;
@@ -6,6 +7,6 @@
 	box-sizing: border-box;
 }
 body{
-	background: url("/client/static/img/background.png") no-repeat center center fixed;
+	background: url("/client/static/img/background_2.jpg") no-repeat center center fixed;
 	background-size: cover;
 }
