--- a/app/app/templates/style.css
+++ b/app/app/templates/style.css
@@ -4,4 +4,54 @@ body {
 
 h2 {
     color: #002364;
+    margin-top: 0;
+    letter-spacing: 0.7px;
+}
+
+h4 {
+    color: #4a4a48;
+    font-weight: lighter;
+    margin-top: 0;
+    letter-spacing: 0.7px;
+}
+
+.img-container {
+    width: 100%;
+    text-align: left;
+}
+
+.basic_rh, .basic_rv {
+    width: 75%;
+}
+
+.basic-table {
+    width: 75%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+}
+
+.basic-table thead tr {
+    /* background-color: #E0E1DA; */
+    background-color: #002364;
+    color: #fff;
+    text-align: left;
+}
+
+.basic-table th,
+.basic-table td {
+    padding: 10px 15px;
+}
+
+.basic-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.basic-table tbody tr:nth-of-type(even) {
+    background-color: #f4f6f7;
+}
+
+.basic-table tbody tr:last-of-type {
+    border-bottom: 2px solid #E0E1DA;
 }
